NIFI-12547: - Set the width of the Property editor. This ensures the width looks correct and the overflow scroll policy works as expected. - Fixed table layout issues where width: 100% from listing table wasn't correct.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/property-table.component.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/property-table.component.scss
@@ -22,7 +22,7 @@
     min-width: 740px;
 
     table {
-        width: 100%;
+        width: auto;
 
         td,
         th {
